// Copyright (c) 2010 Scott A. Crosby. <scott@sacrosby.com>

// Permission is hereby granted, free of charge, to any person obtaining a copy of
// this software and associated documentation files (the "Software"), to deal in
// the Software without restriction, including without limitation the rights to
// use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
// of the Software, and to permit persons to whom the Software is furnished to do
// so, subject to the following conditions:

// The above copyright notice and this permission notice shall be included in all
// copies or substantial portions of the Software.

// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
// SOFTWARE.

syntax = "proto2";

package osmformat;

// The message that precedes every Blob
message BlobHeader {
  required string type = 1;      // Critical for parsing logic (is it Header or Data?)
  optional bytes indexdata = 2;  // Decoder must read/skip this if present
  required int32 datasize = 3;   // Critical for sequential I/O (how many bytes to read next)
}

// The actual data container
message Blob {
  optional bytes raw = 1;        // Uncompressed data
  optional int32 raw_size = 2;   // Size of the data after decompression
  optional bytes zlib_data = 3;  // ZLIB compressed data (most common)
  optional bytes lzma_data = 4;  // LZMA compressed data (rare)
}
